feat:add credentials in tools
