# backend/app/alembic/versions/eb3cc7d93ffc_add_credentials_in_tools_model.py
@@ -1,0 +1,29 @@
+"""add credentials in tools model
+
+Revision ID: eb3cc7d93ffc
+Revises: b932c4b363ff
+Create Date: 2024-10-15 10:21:02.723033
+
+"""
+from alembic import op
+import sqlalchemy as sa
+import sqlmodel.sql.sqltypes
+
+
+# revision identifiers, used by Alembic.
+revision = 'eb3cc7d93ffc'
+down_revision = 'b932c4b363ff'
+branch_labels = None
+depends_on = None
+
+
+def upgrade():
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('skill', sa.Column('credentials', sa.JSON(), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade():
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('skill', 'credentials')
+    # ### end Alembic commands ###
